// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components- Features - WeatherList - default.jsx - test WeatherList with home data Should render all the provinces in the right order 1`] = `
<div>
  <div>
    <div
      class="grid-weather-home"
    >
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/buenos-aires/"
            title="Ver clima en Ciudad de Buenos Aires"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Ciudad de Buenos Aires
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            13
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            8º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            13º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/buenos-aires/"
            title="Ver clima en Ciudad de Buenos Aires"
          >
            Ver clima en Ciudad de Buenos Aires
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/catamarca/"
            title="Ver clima en San Fernando del Valle de Catamarca"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              San Fernando del Valle de Catamarca
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Algo nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            22
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            4º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            22º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/catamarca/"
            title="Ver clima en San Fernando del Valle de Catamarca"
          >
            Ver clima en San Fernando del Valle de Catamarca
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/chaco/"
            title="Ver clima en Resistencia"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Resistencia
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            19
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            13º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            19º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/chaco/"
            title="Ver clima en Resistencia"
          >
            Ver clima en Resistencia
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/chubut/"
            title="Ver clima en Rawson"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Rawson
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Ventoso
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="windy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            11
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/chubut/"
            title="Ver clima en Rawson"
          >
            Ver clima en Rawson
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/cordoba/"
            title="Ver clima en Córdoba"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Córdoba
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            17
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            8º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            17º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/cordoba/"
            title="Ver clima en Córdoba"
          >
            Ver clima en Córdoba
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/corrientes/"
            title="Ver clima en Corrientes"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Corrientes
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Lluvias aisladas
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="rain"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            19
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            15º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            19º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/corrientes/"
            title="Ver clima en Corrientes"
          >
            Ver clima en Corrientes
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/entre-rios/"
            title="Ver clima en Paraná"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Paraná
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            14
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            10º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            14º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/entre-rios/"
            title="Ver clima en Paraná"
          >
            Ver clima en Paraná
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/formosa/"
            title="Ver clima en Formosa"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Formosa
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            20
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            14º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            20º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/formosa/"
            title="Ver clima en Formosa"
          >
            Ver clima en Formosa
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/jujuy/"
            title="Ver clima en San Salvador de Jujuy"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              San Salvador de Jujuy
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            18
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            10º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            18º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/jujuy/"
            title="Ver clima en San Salvador de Jujuy"
          >
            Ver clima en San Salvador de Jujuy
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/la-pampa/"
            title="Ver clima en Santa Rosa"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Santa Rosa
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            16
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            3º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            16º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/la-pampa/"
            title="Ver clima en Santa Rosa"
          >
            Ver clima en Santa Rosa
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/la-rioja/"
            title="Ver clima en La Rioja"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              La Rioja
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Despejado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sun"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            22
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            6º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            22º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/la-rioja/"
            title="Ver clima en La Rioja"
          >
            Ver clima en La Rioja
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/mendoza/"
            title="Ver clima en Mendoza"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Mendoza
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Ligeramente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            18
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            4º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            18º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/mendoza/"
            title="Ver clima en Mendoza"
          >
            Ver clima en Mendoza
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/misiones/"
            title="Ver clima en Posadas"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Posadas
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Lluvias aisladas
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="rain"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            20
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            16º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            23º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/misiones/"
            title="Ver clima en Posadas"
          >
            Ver clima en Posadas
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/neuquen/"
            title="Ver clima en Neuquén"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Neuquén
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            13
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            -1º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            13º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/neuquen/"
            title="Ver clima en Neuquén"
          >
            Ver clima en Neuquén
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/rio-negro/"
            title="Ver clima en Viedma"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Viedma
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            12
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/rio-negro/"
            title="Ver clima en Viedma"
          >
            Ver clima en Viedma
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/salta/"
            title="Ver clima en Salta"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Salta
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            16
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            7º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            16º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/salta/"
            title="Ver clima en Salta"
          >
            Ver clima en Salta
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/san-juan/"
            title="Ver clima en San Juan"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              San Juan
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Despejado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sun"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            19
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            2º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            19º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/san-juan/"
            title="Ver clima en San Juan"
          >
            Ver clima en San Juan
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/san-luis/"
            title="Ver clima en San Luis"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              San Luis
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            20
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            5º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            20º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/san-luis/"
            title="Ver clima en San Luis"
          >
            Ver clima en San Luis
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/santa-cruz"
            title="Ver clima en Río Gallegos"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Río Gallegos
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Lluvias
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="rain"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            5
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            2º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            5º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/santa-cruz"
            title="Ver clima en Río Gallegos"
          >
            Ver clima en Río Gallegos
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/santa-fe"
            title="Ver clima en Santa Fe"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Santa Fe
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            15
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            11º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            15º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/santa-fe"
            title="Ver clima en Santa Fe"
          >
            Ver clima en Santa Fe
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/santiago-del-estero"
            title="Ver clima en Santiago del Estero"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Santiago del Estero
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Algo nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            21
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            8º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            21º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/santiago-del-estero"
            title="Ver clima en Santiago del Estero"
          >
            Ver clima en Santiago del Estero
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/tierra-del-fuego"
            title="Ver clima en Ushuaia"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Ushuaia
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            5
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            2º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            5º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/tierra-del-fuego"
            title="Ver clima en Ushuaia"
          >
            Ver clima en Ushuaia
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/tucuman"
            title="Ver clima en San Miguel de Tucumán"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              San Miguel de Tucumán
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            21
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            7º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            21º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/tucuman"
            title="Ver clima en San Miguel de Tucumán"
          >
            Ver clima en San Miguel de Tucumán
          </a>
        </h3>
      </div>
    </div>
    <div
      class="content-icon flex flex-column jc-center mb-32"
    >
      <section
        class="mod-headersection  --line"
        role="contentinfo"
      >
        <h3
          class="com-title --font-primary --xl --font-black"
        >
          Referencias del clima
        </h3>
      </section>
      <div
        class="icon-references w-100 p-16 rounded-4"
      >
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="sun"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Despejado (día)
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="clearNight"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Despejado (noche)
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="windy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Ventoso
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Parcialmente nublado
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Mayormente nublado
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="rainyCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Llovizna
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="rain"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Lluvias Fuertes
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="stormCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Tormentas
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="storm"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Tormentas fuertes
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="snowCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Lluvia y Nevada
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="snow"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Nevadas Fuertes
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="drop"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Humedad
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components- Features - WeatherList - default.jsx - test WeatherList with province w/ cities Should render the cities in alphabetical order 1`] = `
<div>
  <div>
    <div
      class="grid-weather-home"
    >
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/mendoza/malargue"
            title="Ver clima en Malargüe"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Malargüe
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            13
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/mendoza/malargue"
            title="Ver clima en Malargüe"
          >
            Ver clima en Malargüe
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/mendoza/mendoza"
            title="Ver clima en Mendoza"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              Mendoza
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Parcialmente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            16
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            6º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            16º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/mendoza/mendoza"
            title="Ver clima en Mendoza"
          >
            Ver clima en Mendoza
          </a>
        </h3>
      </div>
      <div
        class="weather-card"
      >
        <div>
          <a
            class="com-link"
            href="/clima/mendoza/san-rafael"
            title="Ver clima en San Rafael"
          >
            <h2
              class="com-text --font-bold --2xs"
            >
              San Rafael
            </h2>
          </a>
          <p
            class="description --font-light --fivexs"
          >
            Mayormente nublado
          </p>
        </div>
        <div
          class="box-icon"
        >
          <i
            class="icon --icon-48"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <p
            class="com-text --font-bold --twoxl"
          >
            16
            <span
              class="com-text --m"
            >
              ºc
            </span>
          </p>
        </div>
        <div
          class="temperature"
        >
          <span
            class="com-text --5xs"
          >
            Mín:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            4º
          </span>
          <span
            class="com-text --5xs"
          >
            Máx:
          </span>
          <span
            class="com-text --font-bold --4xs"
          >
            16º
          </span>
        </div>
        <h3
          class="com-text --fivexs"
        >
          <a
            class="com-link"
            href="/clima/mendoza/san-rafael"
            title="Ver clima en San Rafael"
          >
            Ver clima en San Rafael
          </a>
        </h3>
      </div>
    </div>
    <div
      class="content-icon flex flex-column jc-center mb-32"
    >
      <section
        class="mod-headersection  --line"
        role="contentinfo"
      >
        <h3
          class="com-title --font-primary --xl --font-black"
        >
          Referencias del clima
        </h3>
      </section>
      <div
        class="icon-references w-100 p-16 rounded-4"
      >
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="sun"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Despejado (día)
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="clearNight"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Despejado (noche)
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="windy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Ventoso
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="sunCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Parcialmente nublado
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="cloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Mayormente nublado
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="rainyCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Llovizna
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="rain"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Lluvias Fuertes
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="stormCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Tormentas
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="storm"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Tormentas fuertes
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="snowCloudy"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Lluvia y Nevada
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="snow"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Nevadas Fuertes
          </span>
        </div>
        <div
          class="card-icon flex ai-center w-100 p-16"
        >
          <i
            class="icon mr-16 --icon-24 --hasWrapper"
            style="background-color: rgb(242, 242, 242);"
          >
            <mock-icon
              critical=""
              name="drop"
            />
          </i>
          <span
            class="com-text --2xs"
          >
            Humedad
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
